Working button and removed default files

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ local.properties
 .cache-main
 .scala_dependencies
 .worksheet
+.metadata/.plugins/org.eclipse.core.resources/.history/ed/40b09f632b8d00181f7b8e8257baa378
+.metadata/.plugins/org.eclipse.core.resources/.projects/CoffeeCompass/.markers.snap
